# cafe-table

./: README.md  pyproject.toml  table.json
.github/workflows/: publish.yml
src/cafe/: main.py
src/cafe_table.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
